# pydantic-ai-todos

./: .gitmodules  package.json
agent/: pyproject.toml
agent/src/: agent.py  copilot_model.py
scripts/: start.sh  stop.sh
src/app/: layout.tsx
